@@ -3,10 +3,12 @@ package global;
 import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.text.SimpleDateFormat;
 import java.io.File;
 import java.io.FileInputStream;
+import java.io.FileOutputStream;
 import java.io.IOException;
 import java.util.Date;
 import java.util.NoSuchElementException;
@@ -16,8 +18,8 @@ import java.util.logging.*;
 public class Configuration {
   private static Configuration instance = null;
   Properties prop;
-  Path configFolder = Path.of(System.getProperty("user.home") + File.separator + ".carcassonne");
-  Path logsFolder = Path.of(configFolder.toString() + File.separator + "logs");
+  Path configFolder = Paths.get(System.getProperty("user.home") + File.separator + ".carcassonne");
+  Path logsFolder = Paths.get(configFolder.toString() + File.separator + "logs");
 
   public static InputStream charge(String name) {
     return ClassLoader.getSystemClassLoader().getResourceAsStream(name);
@@ -30,9 +32,9 @@ public class Configuration {
   private void generateConfigFolder(Path configPath) {
     try {
       Files.createDirectories(configPath);
-      Files.createDirectories(Path.of(configPath.toString() + File.separator + "logs"));
-      Files.createDirectories(Path.of(configPath.toString() + File.separator + "saves"));
-      Files.copy(Path.of("assets/default.cfg"), Path.of(configPath + "/config.cfg"),
+      Files.createDirectories(Paths.get(configPath.toString() + File.separator + "logs"));
+      Files.createDirectories(Paths.get(configPath.toString() + File.separator + "saves"));
+      Files.copy(Configuration.charge("default.cfg"), Paths.get(configPath.toString() + File.separator + "config.cfg"),
           StandardCopyOption.REPLACE_EXISTING);
     } catch (Exception e) {
       System.err.println("Impossible de créer le dossier de configuration");
@@ -55,8 +57,8 @@ public class Configuration {
 
     // Utilisation du fichier de configuration contenue dans le dossier applications
     try {
-      if (!Files.exists(Path.of(configFolder.toString() + File.separator + "config.cfg")))
-        Files.copy(Path.of("assets/default.cfg"), Path.of(configFolder + "/config.cfg"),
+      if (!Files.exists(Paths.get(configFolder.toString() + File.separator + "config.cfg")))
+        Files.copy(Configuration.charge("default.cfg"), Paths.get(configFolder + "/config.cfg"),
             StandardCopyOption.REPLACE_EXISTING);
       FileInputStream f = new FileInputStream(configFolder.toFile() + File.separator + "config.cfg");
       prop = new Properties(prop);
@@ -66,10 +68,10 @@ public class Configuration {
       // Utilisation du fichier de configuration par défaut
       try {
         prop = new Properties(prop);
-        FileInputStream f = new FileInputStream("assets/default.cfg");
+        InputStream f = Configuration.charge("default.cfg");
         prop.load(f);
         f.close();
-        Files.copy(Path.of("default.cfg"), Path.of(configFolder.toString() + "/config.cfg"), StandardCopyOption.REPLACE_EXISTING);
+        Files.copy(Configuration.charge("default.cfg"), Paths.get(configFolder.toString() + "/config.cfg"), StandardCopyOption.REPLACE_EXISTING);
       } catch (Exception e2) {
         System.err.println("Impossible de charger le fichier de configuration");
       }
@@ -90,6 +92,24 @@ public class Configuration {
     return res;
   }
 
+  /**
+   ** CHange le fichier de property
+   */
+  public void setProperty(String key, String value) {
+    prop.setProperty(key, value);
+    try {
+      if (configFolder != null) {
+        prop.store(new FileOutputStream(configFolder.toString() + File.separator + "config.cfg"), null);
+      }
+    } catch (IOException e) {
+      logger().severe("Le fichier de configuration n'existe pas");
+    }
+  }
+
+  /**
+   ** Génére le nom de fichier pour les logs
+   * @return
+   */
   String getFileLoggerName() {
     SimpleDateFormat formatter = new SimpleDateFormat("yyyy-MM-dd_HH_mm_ss");
     Date date = new Date();
